crates/toml/tests/snapshots/invalid/ext/datetime/day-1digit.stderr
TOML parse error at line 1, column 7
  |
1 | foo = 1997-09-9
  |       ^^^^^^^^^
invalid date, expected a two-digit day (DD)
